--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title>HAI</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 </head>
 <body>
-	Lorem Ipsum
+	<h1>Lorem Ipsum</h1>
 </body>
+	<script src="assets/js/bootstrap.min.js"></script>
 </html>
